# wireguard-wedus

./: README.md  index.html  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: config.rs  keys.rs  mod.rs  stats.rs  tunnel.rs
src-tauri/src/wireguard/: cli.rs  config_parser.rs  mod.rs  types.rs
src/components/ConfigEditor/: ConfigEditor.css  ConfigEditor.tsx
src/components/EmptyState/: EmptyState.css  EmptyState.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/StatsPanel/: StatsPanel.css  StatsPanel.tsx
src/components/StatusPanel/: StatusPanel.css  StatusPanel.tsx
src/components/TitleBar/: TitleBar.css  TitleBar.tsx
src/hooks/: useStats.ts  useTunnels.ts
src/lib/: api.ts  types.ts  utils.ts
