[package]
name = "wireguard-wedus"
version = "0.1.0"
description = "WireGuard Wedus - A WireGuard VPN Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "wireguard_wedus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "fs", "sync", "time"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
